设置画板颜色，全屏展示时会有白色背景

--- a/day025_zaojiuAudioPlayer.framer/framer/config.json
+++ b/day025_zaojiuAudioPlayer.framer/framer/config.json
@@ -14,7 +14,7 @@
   "projectId" : "AC2F97E8-B582-4402-B829-13C20A79E9FE",
   "deviceOrientation" : 0,
   "selectedHand" : "",
-  "showBezel" : 0,
+  "showBezel" : false,
   "foldedCodeRanges" : [
 
   ],
